--- a/app/src/main/res/layout/exo_player_control_view.xml
+++ b/app/src/main/res/layout/exo_player_control_view.xml
@@ -4,11 +4,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="#000"
+        android:background="@color/black"
         android:layoutDirection="ltr"
         android:orientation="vertical"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
+        android:paddingStart="@dimen/_20dp"
+        android:paddingEnd="@dimen/_20dp"
         tools:targetApi="28">
 
     <LinearLayout
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
-        android:paddingTop="4dp">
+        android:paddingTop="@dimen/_4dp">
 
         <ImageButton
             android:id="@id/exo_rew"
@@ -47,7 +47,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="@dimen/_4dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -56,16 +56,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
+            android:paddingLeft="@dimen/_4dp"
+            android:paddingRight="@dimen/_4dp"
             android:textColor="#ff323232"
-            android:textSize="14sp"
+            android:textSize="@dimen/_16sp"
             android:textStyle="bold" />
 
         <com.google.android.exoplayer2.ui.DefaultTimeBar
             android:id="@id/exo_progress"
             android:layout_width="0dp"
-            android:layout_height="26dp"
+            android:layout_height="@dimen/_26dp"
             android:layout_weight="1"
             app:played_color="@color/black" />
 
@@ -74,10 +74,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
+            android:paddingLeft="@dimen/_4dp"
+            android:paddingRight="@dimen/_4dp"
             android:textColor="#ff323232"
-            android:textSize="14sp"
+            android:textSize="@dimen/_16sp"
             android:textStyle="bold" />
 
     </LinearLayout>
